<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/poster_detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/detail_picture" />

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/poster_detail"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/title_original_detail"
            style="@style/text_view_item"
            android:layout_below="@id/title_detail" />

        <TextView
            android:id="@+id/release_detail"
            style="@style/text_view_item"
            android:layout_below="@id/title_original_detail" />

        <TextView
            android:id="@+id/overview_detail"
            style="@style/text_view_item"
            android:layout_below="@id/release_detail" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/overview_detail"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/button1"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8dp"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button2"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8dp"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button3"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:visibility="invisible" />
        </LinearLayout>


        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_below="@id/linear"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:visibility="invisible"
            app:showYouTubeButton="false"
            app:showFullScreenButton="true" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>







