<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kangaroo.filmore.Views.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_discovery"
            app:destination="@id/navigation_discovery" />
        <action
            android:id="@+id/action_navigation_home_to_detail_fragment"
            app:destination="@id/detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_discovery"
        android:name="com.kangaroo.filmore.Views.ui.discover.DiscoverFragment"
        android:label="@string/title_discovery"
        tools:layout="@layout/fragment_discover" >
        <action
            android:id="@+id/action_navigation_discovery_to_navigation_search"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_discovery_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.kangaroo.filmore.Views.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_discovery"
            app:destination="@id/navigation_discovery" />
        <action
            android:id="@+id/action_navigation_search_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/detail_fragment"
        android:name="com.kangaroo.filmore.Views.ui.detail.DetailActivity"
        android:label="@string/title_search"
        tools:layout="@layout/activity_detail" />
</navigation>